syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.github.veloproject.socialmediaservices.presentation.grpc";
option java_outer_classname = "UserProto";

service UserService {
  rpc UserExistsById (UserExistsByIdRequest) returns (UserExistsByIdResponse);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc GetUsersByIdList (GetUsersByIdListRequest) returns (GetUsersByIdListResponse);
  rpc GetUserByNickname (GetUserByNicknameRequest) returns (GetUserByNicknameResponse);
}

/* === IO === */
message UserExistsByIdRequest {
  int32 id = 1;
}

message UserExistsByIdResponse {
  bool exists = 1;
}

message GetUserByNicknameRequest {
  string nickname = 1;
}

message GetUserByNicknameResponse {
  UserEntity user = 1;
}

message GetUserByIdRequest {
  int32 id = 1;
}

message GetUserByIdResponse {
  UserEntity user = 1;
}

message GetUsersByIdListRequest {
  repeated int32 id = 1;
}

message GetUsersByIdListResponse {
  repeated UserEntity user = 1;
}

/* === ENTITIES === */
message UserEntity {
  int32 id = 1;
  string name = 2;
  string nickname = 3;
  string banner_photo_url = 4;
  string profile_photo_url = 5;
  bool is_blocked = 6;
  bool is_deleted = 7;
}
